[gd_scene load_steps=3 format=3 uid="uid://beqyf7wwki1lo"]

[ext_resource type="Script" path="res://debug_window.gd" id="1_tdl3s"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rk30i"]

[node name="DebugWindow" type="Window"]
initial_position = 1
size = Vector2i(600, 300)
script = ExtResource("1_tdl3s")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="PercentRadio" type="CheckBox" parent="Panel/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
button_group = SubResource("ButtonGroup_rk30i")
text = "%"
flat = true

[node name="FloatRadio" type="CheckBox" parent="Panel/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
button_pressed = true
button_group = SubResource("ButtonGroup_rk30i")
text = "f"
flat = true

[node name="DebugTree" type="Tree" parent="Panel/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 280)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Needs"

[node name="HSeparator" type="HSeparator" parent="Panel/HSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="HungerContainer" type="HBoxContainer" parent="Panel/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="HungerLabel" type="Label" parent="Panel/HSplitContainer/VBoxContainer2/HungerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Hunger"

[node name="HungerValue" type="LineEdit" parent="Panel/HSplitContainer/VBoxContainer2/HungerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HungerButton" type="Button" parent="Panel/HSplitContainer/VBoxContainer2/HungerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Set"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Panel/HSplitContainer/VBoxContainer2/HungerContainer/HungerButton" to="." method="_on_hunger_button_pressed"]
